--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <!-- a - anchor - тег для создания ссылок -->
       <!-- href - hypertext reference тег для перехода-->
       <a href="#seredina">Подняться наверх</a>
-      <img src="https://downloader.disk.yandex.ru/preview/40edfe3d3ea2bad5247485e39ba6216da87ac6e0a154947ff183ead74a1e4787/63938bea/wLnlCQOZJr6GBr0WKebLsYDUguLY9ECnf9uO-KzC3vLEqfiWT1jdz1GAGPhJD4bvFZIr_ES9zlkoKBytBRzXZw%3D%3D?uid=0&filename=BZ6A3805.JPG&disposition=inline&hash=&limit=0&content_type=image%2Fjpeg&owner_uid=0&tknv=v2&size=2048x2048" width="320" height="480" alt="Красивый мужчина">
+      <img src="https://sun9-51.userapi.com/impf/c846416/v846416792/9b2b7/zMLvoxBJbsI.jpg?size=200x200&quality=96&sign=69b1c9b5035f4b11b4ab7a1b28ba4da8&c_uniq_tag=SJGaEbuXlHFvczs5USXts0Hg9sl5p841FFdzj3_aDJ0&type=album" width="320" height="480" alt="Красивый мужчина">
       <ul>
         <li> 
           <p>1. Повесить гирлянды. </p>
@@ -580,8 +580,7 @@
  </p>
 </section>
 <title> моя первая страница</title>
-  <h1><a href="https://netology-code.github.io/wm-homeworks/tags/">Теги для разметки текста и атрибуты</a></h1>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
   </header>
   <body>
     <section>
@@ -595,7 +594,6 @@
   Недавно, например, нейросеть <a href="https://www.sostav.ru/publication/nejroset-yandeksa-napisala-tekst-dlya-muzykalnogo-alboma-22860.html"> научилась </a> писать песни в стиле Егора Летова. Программа проанализировала корпус текстов «Гражданской обороны», выделила закономерности и на их основе составила собственные произведения. Подробнее о нейросетях можно почитать в наших карточках.
       </p>
       </section>
-
       <section>
   <h2>Дорога</h2>
   <p>
