--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <!-- a - anchor - тег для создания ссылок -->
       <!-- href - hypertext reference тег для перехода-->
       <a href="#seredina">Подняться наверх</a>
-      <img src="https://sun9-51.userapi.com/impf/c846416/v846416792/9b2b7/zMLvoxBJbsI.jpg?size=200x200&quality=96&sign=69b1c9b5035f4b11b4ab7a1b28ba4da8&c_uniq_tag=SJGaEbuXlHFvczs5USXts0Hg9sl5p841FFdzj3_aDJ0&type=album" width="320" height="480" alt="Красивый мужчина">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Moench_2339.jpg/1200px-Moench_2339.jpg" width="320" height="480" alt="Красивое фото">
       <ul>
         <li> 
           <p>1. Повесить гирлянды. </p>
