--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ lines (621 sloc) 25.7 KB
   <img src="https://s.fotorama.io/2.jpg">
 </div>
 
-/* font-size - размер шрифта*/
+<!-- /* font-size - размер шрифта*/
 /* color - цвет шрифта */
 /* font-weight - толщина шрифта */
 /* normal - стандартное начертание font-weihgt=400 */
@@ -737,7 +737,7 @@ lines (621 sloc) 25.7 KB
 /* rgba- цвет, плюс прозрачность, a - alpha от 0 до 1, 0-полная прозрачность, 1 - полная непрозрачность. color: rgb(r,g,b,a) color:rgba(0,0,0,0.2) - черный цвет с 20% непрозрачностью */
 /* background-image - фоновое изображение background-image: url(путь/до/picture.jpg) */
 /* background-repeat - повторение фонового изображения, no-repeat - без повторения, repeat-x - повторение по оси X, repeat-y повторение по оси Y */
-/* background-position -  положение фона, left, right, center/top, bottom, center */
+/* background-position -  положение фона, left, right, center/top, bottom, center */ -->
 h1 {
   font-size: 800%;
 } 
