--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ lines (621 sloc) 25.7 KB
   <title> моя первая страница </title>
   <!-- meta - обращение к ресурсу charset(кодировка) -->
   <meta charset="UTF-8">
-</head>
+  <link href="https://github.com/Sunngine/Sunngine/blob/Sunngine/index.css" rel="stylesheet" type="text/css">
+  </head>
 <!-- body - содержимое страницы -->
 
 <body>
